// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RangeSliderControl matches snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      aria-atomic="true"
      aria-live="assertive"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-assertive"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-polite"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div>
      <div
        class="range-slider-control"
        id="range-slider-control-mtb-small_component_radius"
      >
        <div
          class="range-slider-control-header"
        >
          <div
            class="range-slider-control-title range-slider-control-title-with-description"
            role="link"
            tabindex="0"
          >
            <span
              class="customize-control-title range-slider-control-title__item"
            >
              Small Component Radius
            </span>
            <i
              class="material-icons range-slider-control-title__item info-icon"
              title="More info"
            >
              info
            </i>
          </div>
          <span
            class="customize-control-description"
          >
            This is a test description
          </span>
        </div>
        <div
          class="range-slider-control-body"
        >
          <span
            class="range-slider-control-body__item slider"
          >
            <div
              class="components-base-control components-range-control"
            >
              <div
                class="components-base-control__field"
              >
                <span
                  class="components-range-control__root css-yaebbd-Root exqw8y20"
                >
                  <span
                    class="components-range-control__wrapper css-okph2p-Wrapper exqw8y21"
                    color="#00669b"
                  >
                    <input
                      aria-hidden="false"
                      class="components-range-control__slider css-15v4a6m-InputRange exqw8y211"
                      id="inspector-range-control-0"
                      max="36"
                      min="0"
                      step="1"
                      tabindex="0"
                      type="range"
                      value="10"
                    />
                    <span
                      aria-hidden="true"
                      class="css-1lwhlrq-Rail exqw8y24"
                    />
                    <span
                      aria-hidden="true"
                      class="components-range-control__track css-ogrpie-Track exqw8y25"
                      style="width: 27.77777777777778%;"
                    />
                    <span
                      class="css-kjao9s-ThumbWrapper exqw8y29"
                      style="left: 27.77777777777778%;"
                    >
                      <span
                        aria-hidden="true"
                        class="css-c88ajq-Thumb exqw8y210"
                      />
                    </span>
                    <span
                      aria-hidden="false"
                      class="components-simple-tooltip components-range-control__tooltip css-1ula2je-Tooltip exqw8y212"
                      role="tooltip"
                      style="left: 27.77777777777778%; z-index: 100;"
                    >
                      10
                    </span>
                  </span>
                  <input
                    class="components-range-control__number css-1r0c7yf-InputNumber exqw8y213"
                    inputmode="decimal"
                    max="36"
                    min="0"
                    step="1"
                    type="number"
                    value="10"
                  />
                </span>
              </div>
            </div>
          </span>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="range-slider-control"
      id="range-slider-control-mtb-small_component_radius"
    >
      <div
        class="range-slider-control-header"
      >
        <div
          class="range-slider-control-title range-slider-control-title-with-description"
          role="link"
          tabindex="0"
        >
          <span
            class="customize-control-title range-slider-control-title__item"
          >
            Small Component Radius
          </span>
          <i
            class="material-icons range-slider-control-title__item info-icon"
            title="More info"
          >
            info
          </i>
        </div>
        <span
          class="customize-control-description"
        >
          This is a test description
        </span>
      </div>
      <div
        class="range-slider-control-body"
      >
        <span
          class="range-slider-control-body__item slider"
        >
          <div
            class="components-base-control components-range-control"
          >
            <div
              class="components-base-control__field"
            >
              <span
                class="components-range-control__root css-yaebbd-Root exqw8y20"
              >
                <span
                  class="components-range-control__wrapper css-okph2p-Wrapper exqw8y21"
                  color="#00669b"
                >
                  <input
                    aria-hidden="false"
                    class="components-range-control__slider css-15v4a6m-InputRange exqw8y211"
                    id="inspector-range-control-0"
                    max="36"
                    min="0"
                    step="1"
                    tabindex="0"
                    type="range"
                    value="10"
                  />
                  <span
                    aria-hidden="true"
                    class="css-1lwhlrq-Rail exqw8y24"
                  />
                  <span
                    aria-hidden="true"
                    class="components-range-control__track css-ogrpie-Track exqw8y25"
                    style="width: 27.77777777777778%;"
                  />
                  <span
                    class="css-kjao9s-ThumbWrapper exqw8y29"
                    style="left: 27.77777777777778%;"
                  >
                    <span
                      aria-hidden="true"
                      class="css-c88ajq-Thumb exqw8y210"
                    />
                  </span>
                  <span
                    aria-hidden="false"
                    class="components-simple-tooltip components-range-control__tooltip css-1ula2je-Tooltip exqw8y212"
                    role="tooltip"
                    style="left: 27.77777777777778%; z-index: 100;"
                  >
                    10
                  </span>
                </span>
                <input
                  class="components-range-control__number css-1r0c7yf-InputNumber exqw8y213"
                  inputmode="decimal"
                  max="36"
                  min="0"
                  step="1"
                  type="number"
                  value="10"
                />
              </span>
            </div>
          </div>
        </span>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`RangeSliderControl matches snapshot when is global 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      aria-atomic="true"
      aria-live="assertive"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-assertive"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-polite"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div>
      <div
        class="range-slider-control"
        id="range-slider-control-mtb-small_component_radius"
      >
        <div
          class="range-slider-control-header"
        >
          <div
            class="range-slider-control-title range-slider-control-title-with-description"
            role="link"
            tabindex="0"
          >
            <span
              class="customize-control-title range-slider-control-title__item"
            >
              Small Component Radius
            </span>
            <i
              class="material-icons range-slider-control-title__item info-icon"
              title="More info"
            >
              info
            </i>
          </div>
          <span
            class="customize-control-description"
          >
            This is a test description
          </span>
        </div>
        <div
          class="range-slider-control-body"
        >
          <span
            class="range-slider-control-body__item slider"
          >
            <div
              class="components-base-control components-range-control"
            >
              <div
                class="components-base-control__field"
              >
                <span
                  class="components-range-control__root css-yaebbd-Root exqw8y20"
                >
                  <span
                    class="components-range-control__wrapper css-okph2p-Wrapper exqw8y21"
                    color="#00669b"
                  >
                    <input
                      aria-hidden="false"
                      class="components-range-control__slider css-15v4a6m-InputRange exqw8y211"
                      id="inspector-range-control-2"
                      max="36"
                      min="0"
                      step="1"
                      tabindex="0"
                      type="range"
                      value="10"
                    />
                    <span
                      aria-hidden="true"
                      class="css-1lwhlrq-Rail exqw8y24"
                    />
                    <span
                      aria-hidden="true"
                      class="components-range-control__track css-ogrpie-Track exqw8y25"
                      style="width: 27.77777777777778%;"
                    />
                    <span
                      class="css-kjao9s-ThumbWrapper exqw8y29"
                      style="left: 27.77777777777778%;"
                    >
                      <span
                        aria-hidden="true"
                        class="css-c88ajq-Thumb exqw8y210"
                      />
                    </span>
                    <span
                      aria-hidden="false"
                      class="components-simple-tooltip components-range-control__tooltip css-1ula2je-Tooltip exqw8y212"
                      role="tooltip"
                      style="left: 27.77777777777778%; z-index: 100;"
                    >
                      10
                    </span>
                  </span>
                  <input
                    class="components-range-control__number css-1r0c7yf-InputNumber exqw8y213"
                    inputmode="decimal"
                    max="36"
                    min="0"
                    step="1"
                    type="number"
                    value="10"
                  />
                </span>
              </div>
            </div>
          </span>
          <span
            class="range-slider-control-body__item"
          >
            <button
              aria-label="View individual components"
              aria-pressed="true"
              class="components-button range-slider-control-settings-expanded is-pressed is-link has-icon"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="dashicon dashicons-admin-settings"
                focusable="false"
                height="20"
                role="img"
                viewBox="0 0 20 20"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18 16V4c0-.55-.45-1-1-1H4c-.55 0-1 .45-1 1v12c0 .55.45 1 1 1h13c.55 0 1-.45 1-1zM8 11h1c.55 0 1 .45 1 1s-.45 1-1 1H8v1.5c0 .28-.22.5-.5.5s-.5-.22-.5-.5V13H6c-.55 0-1-.45-1-1s.45-1 1-1h1V5.5c0-.28.22-.5.5-.5s.5.22.5.5V11zm5-2h-1c-.55 0-1-.45-1-1s.45-1 1-1h1V5.5c0-.28.22-.5.5-.5s.5.22.5.5V7h1c.55 0 1 .45 1 1s-.45 1-1 1h-1v5.5c0 .28-.22.5-.5.5s-.5-.22-.5-.5V9z"
                />
              </svg>
            </button>
          </span>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="range-slider-control"
      id="range-slider-control-mtb-small_component_radius"
    >
      <div
        class="range-slider-control-header"
      >
        <div
          class="range-slider-control-title range-slider-control-title-with-description"
          role="link"
          tabindex="0"
        >
          <span
            class="customize-control-title range-slider-control-title__item"
          >
            Small Component Radius
          </span>
          <i
            class="material-icons range-slider-control-title__item info-icon"
            title="More info"
          >
            info
          </i>
        </div>
        <span
          class="customize-control-description"
        >
          This is a test description
        </span>
      </div>
      <div
        class="range-slider-control-body"
      >
        <span
          class="range-slider-control-body__item slider"
        >
          <div
            class="components-base-control components-range-control"
          >
            <div
              class="components-base-control__field"
            >
              <span
                class="components-range-control__root css-yaebbd-Root exqw8y20"
              >
                <span
                  class="components-range-control__wrapper css-okph2p-Wrapper exqw8y21"
                  color="#00669b"
                >
                  <input
                    aria-hidden="false"
                    class="components-range-control__slider css-15v4a6m-InputRange exqw8y211"
                    id="inspector-range-control-2"
                    max="36"
                    min="0"
                    step="1"
                    tabindex="0"
                    type="range"
                    value="10"
                  />
                  <span
                    aria-hidden="true"
                    class="css-1lwhlrq-Rail exqw8y24"
                  />
                  <span
                    aria-hidden="true"
                    class="components-range-control__track css-ogrpie-Track exqw8y25"
                    style="width: 27.77777777777778%;"
                  />
                  <span
                    class="css-kjao9s-ThumbWrapper exqw8y29"
                    style="left: 27.77777777777778%;"
                  >
                    <span
                      aria-hidden="true"
                      class="css-c88ajq-Thumb exqw8y210"
                    />
                  </span>
                  <span
                    aria-hidden="false"
                    class="components-simple-tooltip components-range-control__tooltip css-1ula2je-Tooltip exqw8y212"
                    role="tooltip"
                    style="left: 27.77777777777778%; z-index: 100;"
                  >
                    10
                  </span>
                </span>
                <input
                  class="components-range-control__number css-1r0c7yf-InputNumber exqw8y213"
                  inputmode="decimal"
                  max="36"
                  min="0"
                  step="1"
                  type="number"
                  value="10"
                />
              </span>
            </div>
          </div>
        </span>
        <span
          class="range-slider-control-body__item"
        >
          <button
            aria-label="View individual components"
            aria-pressed="true"
            class="components-button range-slider-control-settings-expanded is-pressed is-link has-icon"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="dashicon dashicons-admin-settings"
              focusable="false"
              height="20"
              role="img"
              viewBox="0 0 20 20"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18 16V4c0-.55-.45-1-1-1H4c-.55 0-1 .45-1 1v12c0 .55.45 1 1 1h13c.55 0 1-.45 1-1zM8 11h1c.55 0 1 .45 1 1s-.45 1-1 1H8v1.5c0 .28-.22.5-.5.5s-.5-.22-.5-.5V13H6c-.55 0-1-.45-1-1s.45-1 1-1h1V5.5c0-.28.22-.5.5-.5s.5.22.5.5V11zm5-2h-1c-.55 0-1-.45-1-1s.45-1 1-1h1V5.5c0-.28.22-.5.5-.5s.5.22.5.5V7h1c.55 0 1 .45 1 1s-.45 1-1 1h-1v5.5c0 .28-.22.5-.5.5s-.5-.22-.5-.5V9z"
              />
            </svg>
          </button>
        </span>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`RangeSliderControl matches snapshot when no description is provided 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      aria-atomic="true"
      aria-live="assertive"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-assertive"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div
      aria-atomic="true"
      aria-live="polite"
      aria-relevant="additions text"
      class="a11y-speak-region"
      id="a11y-speak-polite"
      style="position: absolute;margin: -1px;padding: 0;height: 1px;width: 1px;overflow: hidden;clip: rect(1px, 1px, 1px, 1px);-webkit-clip-path: inset(50%);clip-path: inset(50%);border: 0;word-wrap: normal !important;"
    />
    <div>
      <div
        class="range-slider-control"
        id="range-slider-control-mtb-small_component_radius"
      >
        <div
          class="range-slider-control-header"
        >
          <div
            class="range-slider-control-title"
            role="link"
            tabindex="0"
          >
            <span
              class="customize-control-title range-slider-control-title__item"
            >
              Small Component Radius
            </span>
          </div>
        </div>
        <div
          class="range-slider-control-body"
        >
          <span
            class="range-slider-control-body__item slider"
          >
            <div
              class="components-base-control components-range-control"
            >
              <div
                class="components-base-control__field"
              >
                <span
                  class="components-range-control__root css-yaebbd-Root exqw8y20"
                >
                  <span
                    class="components-range-control__wrapper css-okph2p-Wrapper exqw8y21"
                    color="#00669b"
                  >
                    <input
                      aria-hidden="false"
                      class="components-range-control__slider css-15v4a6m-InputRange exqw8y211"
                      id="inspector-range-control-1"
                      max="36"
                      min="0"
                      step="1"
                      tabindex="0"
                      type="range"
                      value="10"
                    />
                    <span
                      aria-hidden="true"
                      class="css-1lwhlrq-Rail exqw8y24"
                    />
                    <span
                      aria-hidden="true"
                      class="components-range-control__track css-ogrpie-Track exqw8y25"
                      style="width: 27.77777777777778%;"
                    />
                    <span
                      class="css-kjao9s-ThumbWrapper exqw8y29"
                      style="left: 27.77777777777778%;"
                    >
                      <span
                        aria-hidden="true"
                        class="css-c88ajq-Thumb exqw8y210"
                      />
                    </span>
                    <span
                      aria-hidden="false"
                      class="components-simple-tooltip components-range-control__tooltip css-1ula2je-Tooltip exqw8y212"
                      role="tooltip"
                      style="left: 27.77777777777778%; z-index: 100;"
                    >
                      10
                    </span>
                  </span>
                  <input
                    class="components-range-control__number css-1r0c7yf-InputNumber exqw8y213"
                    inputmode="decimal"
                    max="36"
                    min="0"
                    step="1"
                    type="number"
                    value="10"
                  />
                </span>
              </div>
            </div>
          </span>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="range-slider-control"
      id="range-slider-control-mtb-small_component_radius"
    >
      <div
        class="range-slider-control-header"
      >
        <div
          class="range-slider-control-title"
          role="link"
          tabindex="0"
        >
          <span
            class="customize-control-title range-slider-control-title__item"
          >
            Small Component Radius
          </span>
        </div>
      </div>
      <div
        class="range-slider-control-body"
      >
        <span
          class="range-slider-control-body__item slider"
        >
          <div
            class="components-base-control components-range-control"
          >
            <div
              class="components-base-control__field"
            >
              <span
                class="components-range-control__root css-yaebbd-Root exqw8y20"
              >
                <span
                  class="components-range-control__wrapper css-okph2p-Wrapper exqw8y21"
                  color="#00669b"
                >
                  <input
                    aria-hidden="false"
                    class="components-range-control__slider css-15v4a6m-InputRange exqw8y211"
                    id="inspector-range-control-1"
                    max="36"
                    min="0"
                    step="1"
                    tabindex="0"
                    type="range"
                    value="10"
                  />
                  <span
                    aria-hidden="true"
                    class="css-1lwhlrq-Rail exqw8y24"
                  />
                  <span
                    aria-hidden="true"
                    class="components-range-control__track css-ogrpie-Track exqw8y25"
                    style="width: 27.77777777777778%;"
                  />
                  <span
                    class="css-kjao9s-ThumbWrapper exqw8y29"
                    style="left: 27.77777777777778%;"
                  >
                    <span
                      aria-hidden="true"
                      class="css-c88ajq-Thumb exqw8y210"
                    />
                  </span>
                  <span
                    aria-hidden="false"
                    class="components-simple-tooltip components-range-control__tooltip css-1ula2je-Tooltip exqw8y212"
                    role="tooltip"
                    style="left: 27.77777777777778%; z-index: 100;"
                  >
                    10
                  </span>
                </span>
                <input
                  class="components-range-control__number css-1r0c7yf-InputNumber exqw8y213"
                  inputmode="decimal"
                  max="36"
                  min="0"
                  step="1"
                  type="number"
                  value="10"
                />
              </span>
            </div>
          </div>
        </span>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
